// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar component should render correctly with default props 1`] = `
Array [
  ".appBar-0-2-1 {
  flex: auto;
  width: auto;
  display: flex;
  padding: 4px 8px;
  font-size: 20px;
  min-height: 56px;
  align-items: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  line-height: 1.25;
  flex-direction: row;
  letter-spacing: 0.24px;
  justify-content: space-between;
}
.appBar-d0-0-2-2 {
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  color: #333333;
}",
  <div>
    <div
      class=" appBar-0-2-1 appBar-d0-0-2-2"
    >
      app bar
    </div>
  </div>,
]
`;

exports[`AppBar component should render correctly with inverse color variant 1`] = `
Array [
  ".appBar-0-2-1 {
  flex: auto;
  width: auto;
  display: flex;
  padding: 4px 8px;
  font-size: 20px;
  min-height: 56px;
  align-items: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  line-height: 1.25;
  flex-direction: row;
  letter-spacing: 0.24px;
  justify-content: space-between;
}
.appBar-d0-0-2-2 {
  background-color: #333333;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  color: #ffffff;
}",
  <div>
    <div
      class=" appBar-0-2-1 appBar-d0-0-2-2"
    >
      app bar
    </div>
  </div>,
]
`;

exports[`AppBar component should render correctly with none color variant 1`] = `
Array [
  ".appBar-0-2-1 {
  flex: auto;
  width: auto;
  display: flex;
  padding: 4px 8px;
  font-size: 20px;
  min-height: 56px;
  align-items: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  line-height: 1.25;
  flex-direction: row;
  letter-spacing: 0.24px;
  justify-content: space-between;
}
.appBar-d0-0-2-2 {
  background-color: transparent;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  color: #000000;
}",
  <div>
    <div
      class=" appBar-0-2-1 appBar-d0-0-2-2"
    >
      app bar
    </div>
  </div>,
]
`;

exports[`AppBar component should render correctly with primary color variant 1`] = `
Array [
  ".appBar-0-2-1 {
  flex: auto;
  width: auto;
  display: flex;
  padding: 4px 8px;
  font-size: 20px;
  min-height: 56px;
  align-items: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  line-height: 1.25;
  flex-direction: row;
  letter-spacing: 0.24px;
  justify-content: space-between;
}
.appBar-d0-0-2-2 {
  background-color: #f4ab34;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  color: #333333;
}",
  <div>
    <div
      class=" appBar-0-2-1 appBar-d0-0-2-2"
    >
      app bar
    </div>
  </div>,
]
`;

exports[`AppBar component should render correctly without elevation 1`] = `
Array [
  ".appBar-0-2-1 {
  flex: auto;
  width: auto;
  display: flex;
  padding: 4px 8px;
  font-size: 20px;
  min-height: 56px;
  align-items: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  line-height: 1.25;
  flex-direction: row;
  letter-spacing: 0.24px;
  justify-content: space-between;
}
.appBar-d0-0-2-2 {
  background-color: #ffffff;
  box-shadow: none;
  color: #333333;
}",
  <div>
    <div
      class=" appBar-0-2-1 appBar-d0-0-2-2"
    >
      app bar
    </div>
  </div>,
]
`;
